fix overlapping ingredients list

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -150,7 +150,7 @@ body {
 
 .form-button-container {
     /* margin-top: 20px; */
-    padding-top: 10%;
+    padding-top: 3%;
     display: flex;
     justify-content: space-around;
     width: 70%; 
@@ -158,24 +158,29 @@ body {
 
 .form-btn {
     transition-duration: .125s;
+    margin-left: 10px;
+    margin-right: 10px;
     padding: 10px 14px;
     border: 3px solid white;
     border-radius: 50%;
     opacity: 0.8;
+    z-index: 10;
 }
 
 .form-btn:hover {
     transition-duration: .125s;
-    transform: scale(1.25);
+    transform: scale(1.125);
     opacity: 1;
 }
 
 .ingredients-list-container {
+    margin-top: 5%;
     width: 100%;
     height: 30vh;
     display: flex;
     justify-content: center;
     list-style-type: none;
+    z-index: 0;
 }
 
 #ingredients-list {
@@ -195,7 +200,7 @@ body {
 }
 
 .ingredients-list-title {
-    margin-top: 25%;
+    margin-top: 3%;
     text-decoration: underline;
     font-size: 24px;
 }
